[package]
name = "tram"
authors = ["Kelvin Lee"]
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tram"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = "0.19.0"
priority-queue = "1.3.2"
queues = "1.1.0"
itertools = "0.12.0"
rayon = "1.8.0"
approx = "0.3.2"

[profile.release]
debug = false
